Added content to both head and the body section

--- a/home.html
+++ b/home.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 <title> Home </title>
+<meta charset = "utf-8">
+<script>
+  var name = document.getElementById("name");
+  var res = document.getElementById("res");
+  res.innerHTML = "Welcome, " + name.value;
+</script>
 </head>
 <body>
 <h1> Heading One </h1>
 <p> Paragraph </p>
+<p> The Lord is my Shepherd </p>
 </body>
 </html>
