--- a/home.html
+++ b/home.html
@@ -3,6 +3,12 @@
 <head>
 <title> Home </title>
 <meta charset = "utf-8">
+<style>
+  body {
+    background-color: black;
+	color: white;
+  }
+</style>
 <script>
   var name = document.getElementById("name");
   var res = document.getElementById("res");
