extended paragraph one
edited

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1> Heading One </h1>
-<p> Paragraph </p>
+<p> Paragraph has just been modified </p>
 <p> The Lord is my Shepherd </p>
 </body>
 </html>
